--- a/app/components/Footer/Footer.module.sass
+++ b/app/components/Footer/Footer.module.sass
@@ -10,32 +10,23 @@
     list-style: none
     gap: 2rem
 
+    a
+      text-decoration: none
+
     .title
       display: flex
       flex-wrap: wrap
       align-items: center
       gap: 0.6rem
-      margin-bottom: 0.4rem
+      margin-bottom: 0.2rem
       p
         font-family: outfit-c, serif
         font-size: calc(var(--index) * 1.4)
+        color: #FAFAFA
 
     .text
       font-family: raleway-c, serif
       font-size: calc(var(--index) * 1)
       letter-spacing: 0.01rem
       color: #FAFAFA
-      text-decoration: none
       padding-left: 0.3rem
-
-
-
-
-    //li
-    //  margin-bottom: 0.9rem
-    //  span
-    //    font-family: outfit-c, serif
-    //    font-size: calc(var(--index) * 1.2)
-    //    font-weight: bold
-    //    color: #6865F7
-    //    text-transform: uppercase
