--- a/app/components/Footer/Footer.module.sass
+++ b/app/components/Footer/Footer.module.sass
@@ -5,7 +5,7 @@
   .ul
     display: flex
     flex-wrap: wrap
-    justify-content: space-between
+    justify-content: space-evenly
     align-items: center
     list-style: none
     gap: 2rem
