--- a/app/components/Offer/Offer.module.sass
+++ b/app/components/Offer/Offer.module.sass
@@ -15,8 +15,11 @@
     font-family: raleway-c, serif
     font-size: calc(var(--index) * 1.6)
     letter-spacing: 0.01rem
-    text-align: center
-    margin-bottom: 4rem
+    text-indent: 2rem
+    margin-bottom: 3rem
+
+  .mt_1
+    margin-top: 1rem
 
   .offers
     display: flex
