--- a/app/components/Offer/MotionUl/MotionUl.module.sass
+++ b/app/components/Offer/MotionUl/MotionUl.module.sass
@@ -1,21 +1,22 @@
 .ul
-  font-family: raleway-c, serif
   letter-spacing: 0.01rem
   list-style: none
-  padding-top: 2rem
   font-size: calc(var(--index) * 1.2)
   max-width: 60%
+  background: #1d1f27
+  border-radius: 24px
+  padding: 1.8rem
+  box-shadow: 0 0 #0000, 0 0 #0000, rgba(0, 0, 0, .02) 0 0 16.4px
 
   li
     margin-bottom: 0.9rem
     span
-      font-family: outfit-c, serif
       font-size: calc(var(--index) * 1.2)
       font-weight: bold
-      color: #6865F7
+      color: #e9eaeb
       text-transform: uppercase
 
 @media only screen and (max-width: 640px)
   .ul
-    padding-top: 0
+    padding: 1.4rem
     max-width: 100%
