--- a/app/components/Offer/Offer.module.sass
+++ b/app/components/Offer/Offer.module.sass
@@ -5,14 +5,13 @@
   max-width: 100vw
 
   .title
-    font-family: outfit-c, serif
     font-size: calc(var(--index) * 4)
+    font-weight: 500
     text-align: center
-    color: #FAFAFA
+    color: #e9eaeb
     line-height: 1.1
 
   .text
-    font-family: raleway-c, serif
     font-size: calc(var(--index) * 1.6)
     letter-spacing: 0.01rem
     text-indent: 2rem
