--- a/app/components/Offer/Offer.module.sass
+++ b/app/components/Offer/Offer.module.sass
@@ -24,6 +24,7 @@
     display: flex
     gap: 3rem
     justify-content: space-between
+    align-items: center
     &.reverse
       flex-direction: row-reverse
 
