--- a/app/components/Offer/MotionUl/MotionUl.module.sass
+++ b/app/components/Offer/MotionUl/MotionUl.module.sass
@@ -7,6 +7,7 @@
   border-radius: 24px
   padding: 1.8rem
   box-shadow: 0 0 #0000, 0 0 #0000, rgba(0, 0, 0, .02) 0 0 16.4px
+  margin-top: -6rem
 
   li
     margin-bottom: 0.9rem
@@ -16,7 +17,11 @@
       color: #e9eaeb
       text-transform: uppercase
 
-@media only screen and (max-width: 640px)
+@media only screen and (max-width: 1900px)
+  .ul
+    margin-top: 0
+
+@media only screen and (max-width: 980px)
   .ul
     padding: 1.4rem
     max-width: 100%
