--- a/app/components/Offer/Offer.module.sass
+++ b/app/components/Offer/Offer.module.sass
@@ -24,12 +24,12 @@
     display: flex
     gap: 3rem
     justify-content: space-between
-    align-items: flex-start
+    align-items: center
     &.reverse
       flex-direction: row-reverse
 
 
-@media only screen and (max-width: 640px)
+@media only screen and (max-width: 980px)
   .container
     .text
       margin-bottom: 2rem
